# TapsAff-Django

./: .env.example  .gitignore  Gruntfile.js  README.md  dev.env  flake.nix  manage.py  opensearch.xml  package.json  pyproject.toml  requirements.txt  sitemap.xml  uwsgi.py
data/: clothing_icons.json  weather.json  weather_codes.json  weather_icon.json
static/css/: tapsaff.css
static/sass/: bootstrap.scss  custom.scss  fonts.scss  manifest.scss  mixins.scss  tapsaff.scss
tapsaff/: settings.py  settings_test.py  staticfiles.py  urls.py  wsgi.py
www/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
www/migrations/: 0001_initial.py  0002_remove_weather_nighttime.py  0002_weather_night.py  0003_alter_settings_options.py  0003_auto_20180409_1105.py  0003_auto_20180409_1108.py  0004_auto_20180409_1105.py  0004_auto_20180418_1916.py  0005_auto_20180410_2029.py  0005_auto_20180418_1945.py  0006_auto_20180410_2034.py  0006_auto_20180418_2015.py  0007_auto_20180418_2020.py  0007_settings_delta.py  0008_auto_20180418_2044.py  0008_weather_delta.py  0009_auto_20180418_1925.py  0009_weather_weather_icon.py  0010_auto_20180418_1927.py  0010_auto_20180418_2101.py  0011_auto_20180418_2014.py  0011_auto_20180418_2115.py  0012_auto_20180418_2018.py  0013_auto_20180418_2033.py  0014_weather_weather_icon.py  0015_auto_20180418_2056.py  0016_auto_20180418_2112.py  0017_merge_20190305_1806.py
www/tapmap/: codetoicon.py  icons.py  locations.py  weathercodes.py
www/taps/: forecast.py  settings.py  status.py  weathercom.py  yahoo.py
www/templates/: day.html  footer.html  (+2 more)
(+8 files in other folders)
